--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ text-align:left;
 }
 #header {
 text-align:left;
-background-color:#214555;
+background-color:#ff0000;
 }
 #head-inner {
 margin:0px auto 0px auto;
